# coveragetracer

./: README.md  example.py  main.py  main2.py  pyproject.toml  test.py
.github/workflows/: tests.yaml
dummy/: example.py
dummy/project/: calc.py
resources/: module.py
src/coverageanalyzer/: analyzer.py  block.py  coverageanalyzer.py  line.py  report.py
tests/: test_blockanalyzer.py  test_coverageanalyzer.py
tests/resources/: for-else.py  harness.py
tests/resources/project/: calc.py
tmp/example/: calc.py  example.py
